// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failureLogger log exception based on its status correctly 1`] = `
Object {
  "category": "EXCEPTION",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger log exception based on its status correctly 2`] = `
Object {
  "category": "EXCEPTION",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 404,
}
`;

exports[`failureLogger log fetch network error correctly 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "ENOTFOUND",
  "message": "request to https://unknown/ failed, reason: getaddrinfo ENOTFOUND unknown unknown:443",
  "result": "failure",
}
`;

exports[`failureLogger log fetch response error correctly based on status 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "403 Forbidden",
  "result": "failure",
  "status": 403,
}
`;

exports[`failureLogger log fetch response error correctly based on status 2`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "500 Internal Server Error",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger log other exceptions not described as object correctly 1`] = `
Object {
  "message": "some error message",
  "result": "failure",
}
`;

exports[`failureLogger log without an error object input correctly 1`] = `
Object {
  "action": "someAction",
  "operation": "someOperation",
  "result": "failure",
}
`;
